src/test/deca/syntax/valid/added/instruction4Ligne.deca
// Description:
//    Programme écrivant une instruction simple sur 4 lignes.
//
// Resultats:
//
//
// Historique:
//    cree le 21/12/2024

{
int
x
=
4;
}